---------------------------------------------------------------------------------------------------
Version: 0.3.14
Date: 25.01.2025
  Modding:
    - Added seedling conversion to bobs.
    - Par's broken locales on bobs recipes.
  Features:
    - Added charging_station_count_affected_by_quality to roboports
---------------------------------------------------------------------------------------------------
Version: 0.3.13
Date: 24.01.2025
  Bugfixes:
    - Crash with transport drones.
  Info:
    - Need to learn on getting a better understanding on coding better.
    - Tho that aint easy when over tired.
  Features:
    - Repeatable migration.
  Credit:
    - @jurgy for helping with solving the crash in 0.3.12.
    - @stringweasel for helping with solving the crash in 0.3.12.
---------------------------------------------------------------------------------------------------
Version: 0.3.12
Date: 24.01.2025
  Modding:
    - Tried adding Bobs Advanced logistic science to roboports.
    - Changed how to unlocked armour from start.
    - Armour should now have bob-like recipes.
    - Removed bobs tungsten items from armour MK9 & MK10.
    - Fixed duplicates with bobs untill the fix is done on there end.
  Features:
    - Repeatable migration.
  Changes:
    - [space-age] Improved armour recipe MK8 - MK10. 
  Credit:
    - @jurgy for helping with all the bobs conversion code in 0.3.12.
    - @stringweasel for helping with all the bobs conversion code in 0.3.12.
---------------------------------------------------------------------------------------------------
Version: 0.3.11
Date: 20.01.2025
  Features:
    - First try at repatable migration.
  Modding:
    - Fixed all internal naming changes for bob's mods to work with PAR.
    - Reworked some recipes that do now have bob & vanilla intermediates.
    - Ex: Tungsten & Tungsten Carbide. Has duplicates that will be an issue later if not patched correctly.